src/test/ui/regions-fn-subtyping-return-static-fail.stderr
error[E0308]: mismatched types
  --> $DIR/regions-fn-subtyping-return-static-fail.rs:40:12
   |
LL |     want_F(bar);
   |            ^^^ expected concrete lifetime, found bound lifetime parameter 'cx
   |
   = note: expected type `for<'cx> fn(&'cx S) -> &'cx S`
              found type `for<'a> fn(&'a S) -> &S {bar::<'_>}`

error[E0308]: mismatched types
  --> $DIR/regions-fn-subtyping-return-static-fail.rs:48:12
   |
LL |     want_G(baz);
   |            ^^^ expected concrete lifetime, found bound lifetime parameter 'cx
   |
   = note: expected type `for<'cx> fn(&'cx S) -> &'static S`
              found type `for<'r> fn(&'r S) -> &'r S {baz}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
